# lol_dto

./: pyproject.toml
lol_dto/classes/game/: lol_game_event.py  lol_game_player.py  lol_game_team.py
