[tool.poetry]
name = "lol_dto"
version = "2.0.2"
description = "A unified representation of League of Legends-related information"
authors = ["mrtolkien <gary.mialaret+pypi@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
lol-id-tools = { git = "https://github.com/Leaguepedia/lol_id_tools.git", optional = true }

[tool.poetry.extras]
names = ["lol-id-tools"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
